--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -32,3 +32,5 @@ Runner/GeneratedPluginRegistrant.*
 !default.mode2v3
 !default.pbxuser
 !default.perspectivev3
+# Makefile (add this line)
+Makefile
